Add admin notes field (#1436)
